@@ -1,6 +1,7 @@
 0.166
 
 - Update to Guava 24.1 and Guice 4.2.
+- Bind HttpServerConfig in TestingHttpServerModule to allow for HTTPS testing.
 
 0.165
 
